infrastructure/ibmcloud-galasadev-cluster/galasa-development/managers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: managers
  namespace: galasa-development
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: managers
  template:
    metadata:
      name: managers
      labels:
        app: managers
    spec:
      containers:
        - image: harbor.galasa.dev/galasadev/galasa-managers:main
          imagePullPolicy: Always
          name: managers
          ports:
            - containerPort: 443
              name: managers
