infrastructure/ibmcloud-galasadev-cluster/galasa-development/managers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managers
  namespace: galasa-development
  annotations:
    kubernetes.io/ingress.class: "public-iks-k8s-nginx"
    
spec:
  tls:
  - hosts:
    - development.galasa.dev
    secretName: galasa-wildcard-cert
  rules:
  - host: development.galasa.dev
    http:
      paths:
      - backend:
          service:
            name: managers
            port:
              number: 80
        path: /main/maven-repo/managers
        pathType: Prefix
